# authn-py

./: .flake8  .gitignore  .tool-versions  CHANGELOG.md  CODEOWNERS  README.md  RELEASE.md  noxfile.py  pyproject.toml  release-please-config.json
.github/: dependabot.yaml
.github/workflows/: pypi-release.yml  python-build.yml  python-lint.yml  python-test.yml  python.yml  release-please.yml
examples/: app.toml  requirements.txt
examples/h2o_authn_example/: app.py
h2o_authn/: __init__.py  provider,py  token.py
src/h2o_authn/: __init__.py  _version.py  discovery.py  error.py  provider.py  token.py
src/h2o_authn/discovery/: __init__.py
tests/: test_dummy.py  test_error.py  test_h2o_authn.py  test_token.py  test_token_cointainer.py  test_token_provider.py  test_token_provider_suite.py
