[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["H2O.ai <support@h2o.ai>"]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Internet",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Security",
  "Topic :: Utilities",
]
description = "H2O Python Clients Authentication Helpers"
license = "Apache-2.0"
name = "h2o-authn"
packages = [{include = "h2o_authn", from = "src"}]
readme = "README.md"
repository = "https://github.com/h2oai/authn-py"
version = "0.0.0"

[tool.poetry.dependencies]
httpx = ">=0.16"
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "5.0.4"
flake8-bugbear = "^22.3.23"
flake8-builtins = "^1.5.3"
flake8-deprecated = "^1.3"
flake8-eradicate = "^1.2.0"
flake8-mutable = "^1.2.0"
mypy = "^1.4"
nox = "^2022.1.7"
nox-poetry = "^1.0.3"
pytest = "^7.2"
pytest-asyncio = "^0.21"
respx = "^0.16"
time-machine = "^2.10.0"

[tool.black]
skip-magic-trailing-comma = true
